<resources>
    <string name="app_name">FilRouge</string>
    <string name="guess_my_death" translatable="false">Guess my Death</string>
    <string name="start">Start</string>
    <string name="_5_do_you_do_sport">6 - Do you do sport ?</string>
    <string name="your_hobbies">Your Hobbies</string>
    <string name="result"><![CDATA[<result>]]></string>
    <string name="_6_how_much_time_do_you_spend_watching_tv_netflix_per_week">7 - How much time do you spend watching TV / Netflix per week?</string>
    <string name="_7_do_you_smoke">8 - Do you smoke ?</string>
    <string name="_9_what_is_your_relationship_with_alcohol">9 - What is your relationship with alcohol ?</string>
    <string name="resultchoose"><![CDATA[<resultchoose>]]></string>
    <string name="everyday">Everyday</string>
    <string name="only_in_party">Only in party</string>
    <string name="never">Never</string>
    <string name="_11_do_you_like_travelling">11 - Do you like travelling ?</string>
    <string name="next_page">Next page</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="your_current_lifestyle">Your current lifestyle</string>
    <string name="answer_to_the_following_questions">Answer to the following questions</string>
    <string name="_5_where_do_you">5 - Where do you ?</string>
    <string name="let_s_get_to_know">Let\'s get to know :</string>
    <string name="_3_are_you_left_or_right_handed">3 - Are you left or right handed ?</string>
    <string name="_4_are_you_stressed_by_nature">4 - Are you stressed by nature ?</string>
    <string name="_1_which_gender_are_you">1 - Which gender are you ?</string>
    <string name="_2_what_is_your_nationality">2 - What is your nationality ?</string>
    <string name="left_handed">Left-handed</string>
    <string name="right_handed">Right-handed</string>
    <string name="ambidextrous">Ambidextrous</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="non_binary">Non binary</string>
    <string name="next_questions">Next questions</string>
    <string name="_12_what_is_your_diet">12 - What is your diet ?</string>
    <string name="_13_do_you_feel_lonely">13 - Do you feel lonely?</string>
    <string name="_14_how_many_times_do_you_brush_your_teeth_per_day">14 - How many times do you brush your teeth per day?</string>
    <string name="_15_how_long_do_you_sleep_on_average_per_night">15 - How long do you sleep on average per night ?</string>
    <string name="textview" translatable="false">TextView</string>
    <string name="_16_do_you_resalate_your_dishes">16 - Do you resalate your dishes?</string>
    <string name="_17_what_s_your_bmi">17 - What\'s your BMI?</string>
    <string name="age" translatable="false"><![CDATA[<age>]]></string>
    <string name="rank_your_experience">Rank your experience</string>
    <string name="phrase" translatable="false"><![CDATA[<phrase>]]></string>
    <string name="you_will_die_at">You will die at :</string>
    <string name="at_work">At work :</string>
    <string name="_18_do_you_have_a_driving_licence">18 - Do you have a driving licence ?</string>
    <string name="_19_do_you_work_sitting_down_or_standing_up">19 - Do you work sitting down or standing up ?</string>
    <string name="sitting_down">Sitting down</string>
    <string name="standing_up">Standing up</string>
    <string name="_20_how_much_do_you_earn">20 - How much do you earn ?</string>
    <string name="show_result">Show result</string>
    <string name="exit">Exit</string>
    <string name="_5_where_do_you_live">5 - Where do you live ?</string>
    <string name="life_expectancy_simulator">Life expectancy simulator</string>
    <string name="_10_do_you_practice_coitus">10 - Do you practice coitus?</string>
    <string name="e_mail" translatable="false">E-mail :</string>
    <string name="name" translatable="false"><![CDATA[<Name>]]></string>
    <string name="last_name">Last Name :</string>
    <string name="first_name">First Name :</string>
    <string name="date_of_birth">Date of Birth :</string>
    <string name="_01_01_2020" translatable="false">01/01/2020</string>
    <string name="first_nameEdt" translatable="false"><![CDATA[<First Name>]]></string>
    <string name="information" translatable="false">Information</string>
    <string name="j_k_com" translatable="false"><![CDATA[<j@k.com>]]></string>
    <string name="restart">Restart</string>
    <string name="finish">FINISH</string>
    <string name="send_result_by_mail">Send result by mail</string>
    <string name="mail">Mail</string>
    <string name="_0123456789"><![CDATA[<0123456789>]]></string>
    <string name="phone_number">Phone number :</string>
    <string name="send_result_by_sms">Send result by SMS</string>
</resources>
