<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".AboutYou">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="casual"
                android:text="@string/answer_to_the_following_questions"
                android:textColor="#F8F5F5"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/txtquest5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="casual"
                android:text="@string/_5_where_do_you_live"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stchrep4" />

            <TextView
                android:id="@+id/txtcat1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="casual"
                android:text="@string/let_s_get_to_know"
                android:textColor="#F8F5F5"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tittle" />

            <Switch
                android:id="@+id/stchrep4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="#FFFFFF"
                android:textOff="@string/yes"
                android:textOn="@string/no"
                android:thumbTint="#FFFFFF"
                android:trackTint="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtquest4" />

            <TextView
                android:id="@+id/txtquest3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="casual"
                android:text="@string/_3_are_you_left_or_right_handed"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinrep2" />

            <TextView
                android:id="@+id/txtquest4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="casual"
                android:text="@string/_4_are_you_stressed_by_nature"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rbgrep3" />

            <TextView
                android:id="@+id/txtquest2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="casual"
                android:text="@string/_2_what_is_your_nationality"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rbgrep1" />

            <Spinner
                android:id="@+id/spinrep2"
                android:layout_width="372dp"
                android:layout_height="28dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="#FFFFFF"
                android:backgroundTint="#FFFFFF"
                android:entries="@array/array_rep2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtquest2" />

            <TextView
                android:id="@+id/txtquest1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="casual"
                android:text="@string/_1_which_gender_are_you"
                android:textColor="#FBF8F8"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtcat1" />


            <RadioGroup
                android:id="@+id/rbgrep3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtquest3">

                <RadioButton
                    android:id="@+id/rbrep3a"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:buttonTint="#FFFFFF"
                    android:fontFamily="casual"
                    android:text="@string/left_handed"
                    android:textColor="#FFFFFF" />

                <RadioButton
                    android:id="@+id/rbrep3b"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:buttonTint="#FFFFFF"
                    android:fontFamily="casual"
                    android:text="@string/right_handed"
                    android:textColor="#FFFFFF" />

                <RadioButton
                    android:id="@+id/rbrep3c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="#FFFFFF"
                    android:fontFamily="casual"
                    android:text="@string/ambidextrous"
                    android:textColor="#FFFFFF" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/rbgrep1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtquest1">

                <RadioButton
                    android:id="@+id/rbrep1a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="#FFFFFF"
                    android:fontFamily="casual"
                    android:text="@string/female"
                    android:textColor="#FFFFFF" />

                <RadioButton
                    android:id="@+id/rbrep1b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="#FFFFFF"
                    android:fontFamily="casual"
                    android:text="@string/male"
                    android:textColor="#FFFFFF" />

                <RadioButton
                    android:id="@+id/rbrep1c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="#FFFFFF"
                    android:fontFamily="casual"
                    android:text="@string/non_binary"
                    android:textColor="#FFFFFF" />
            </RadioGroup>

            <Spinner
                android:id="@+id/spinrep5"
                android:layout_width="382dp"
                android:layout_height="28dp"
                android:layout_marginTop="16dp"
                android:background="#FFFFFF"
                android:backgroundTint="#FFFFFF"
                android:entries="@array/array_rep5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtquest5" />

            <Button
                android:id="@+id/bnextQ1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="casual"
                android:onClick="goPage2"
                android:text="@string/next_page"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinrep5" />

            <TextView
                android:id="@+id/txtr4yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:text="@string/yes"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toStartOf="@+id/stchrep4"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtquest4" />

            <TextView
                android:id="@+id/txtr4no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:text="@string/no"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/stchrep4"
                app:layout_constraintTop_toBottomOf="@+id/txtquest4" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>