<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:backgroundTint="#000000"
    tools:context=".AtWork">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cat4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/at_work"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtquest18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="casual"
                android:text="@string/_18_do_you_have_a_driving_licence"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cat4" />

            <TextView
                android:id="@+id/txtrep18no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:fontFamily="casual"
                android:text="@string/no"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/swrep18"
                app:layout_constraintTop_toBottomOf="@+id/txtquest18" />

            <TextView
                android:id="@+id/txtrep18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="casual"
                android:text="@string/yes"
                android:textColor="#FDFDFD"
                app:layout_constraintEnd_toStartOf="@+id/swrep18"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtquest18" />

            <Switch
                android:id="@+id/swrep18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:thumbTint="#FFFFFF"
                android:trackTint="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtquest18" />

            <TextView
                android:id="@+id/txtquest19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="casual"
                android:text="@string/_19_do_you_work_sitting_down_or_standing_up"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/swrep18" />

            <RadioGroup
                android:id="@+id/rgrpquest19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtquest19">

                <RadioButton
                    android:id="@+id/rbrep19a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="#FFFFFF"
                    android:fontFamily="casual"
                    android:text="@string/sitting_down"
                    android:textColor="#FFFFFF" />

                <RadioButton
                    android:id="@+id/rbrep19b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="#FFFFFF"
                    android:fontFamily="casual"
                    android:text="@string/standing_up"
                    android:textColor="#FFFFFF" />
            </RadioGroup>

            <TextView
                android:id="@+id/txtquest20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:fontFamily="casual"
                android:text="@string/_20_how_much_do_you_earn"
                android:textColor="#F8F6F6"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rgrpquest19" />

            <Spinner
                android:id="@+id/spinner20"
                android:layout_width="373dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="#FFFFFF"
                android:entries="@array/array_rep20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtquest20" />

            <Button
                android:id="@+id/btnEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="casual"
                android:onClick="goResult"
                android:text="@string/show_result"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner20" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>